--- a/ai/aisignal/requirements.txt
+++ b/ai/aisignal/requirements.txt
@@ -36,6 +36,7 @@ pillow==12.1.0
 postgrest==2.27.3
 propcache==0.4.1
 protobuf==6.33.5
+psycopg2-binary==2.9.11
 pyarrow==23.0.0
 pycparser==3.0
 pydantic==2.12.5
@@ -47,8 +48,10 @@ PyJWT==2.11.0
 pyparsing==3.3.2
 pyroaring==1.0.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
 pytz==2025.2
 realtime==2.27.3
+redis==7.1.1
 referencing==0.37.0
 requests==2.32.5
 rich==14.3.2
@@ -72,4 +75,3 @@ tzdata==2025.3
 urllib3==2.6.3
 websockets==15.0.1
 yarl==1.22.0
-python-dotenv==1.0.0
