--- a/ai/aisignal/render.yaml
+++ b/ai/aisignal/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ai-signal-v4
+    name: ai-signal-odf5
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: streamlit run app.py
