--- a/ai/aisignal/requirements.txt
+++ b/ai/aisignal/requirements.txt
@@ -29,6 +29,7 @@ mdurl==0.1.2
 mmh3==5.2.0
 multidict==6.7.1
 narwhals==2.16.0
+networkx==3.6.1
 numpy==2.4.2
 packaging==26.0
 pandas==2.3.3
@@ -50,6 +51,7 @@ pyroaring==1.0.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2025.2
+pyvis==0.3.2
 realtime==2.27.3
 redis==7.1.1
 referencing==0.37.0
