--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ai-signal-v4
+    name: ai-signal-odf5
     env: python
     rootDir: ai/aisignal
     buildCommand: pip install -r requirements.txt
