feat: sync local production stack to render (n8n + api + scheduler) - secure

--- a/ai/aisignal/docker-compose.yml
+++ b/ai/aisignal/docker-compose.yml
@@ -60,7 +60,7 @@ services:
       - WEBHOOK_URL=http://localhost:5678/
       - GENERIC_TIMEZONE=Asia/Seoul
       - DB_TYPE=postgresdb
-      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_HOST=aisignal-postgres
       - DB_POSTGRESDB_PORT=5432
       - DB_POSTGRESDB_DATABASE=${DB_NAME:-aisignal}
       - DB_POSTGRESDB_USER=${DB_USER:-postgres}
@@ -98,7 +98,7 @@ services:
     environment:
       - OLLAMA_HOST=0.0.0.0:11434
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:11434/api/tags" ]
+      test: [ "CMD", "ollama", "list" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -122,6 +122,65 @@ services:
     networks:
       - aisignal-network
     depends_on:
+      redis:
+        condition: service_healthy
+
+  # ========================================
+  # Main Application (Streamlit)
+  # ========================================
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: aisignal-app
+    environment:
+      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-aisignal}
+      - REDIS_HOST=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-aisignal2026_secure}
+      - OLLAMA_BASE_URL=http://ollama:11434
+      - DB_MOCK_MODE=false
+      - NAVER_CLIENT_ID=${NAVER_CLIENT_ID}
+      - NAVER_CLIENT_SECRET=${NAVER_CLIENT_SECRET}
+      - ALPHA_VANTAGE_API_KEY=${ALPHA_VANTAGE_API_KEY}
+      - FRED_API_KEY=${FRED_API_KEY}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
+      - OPENWEATHER_KEY=${OPENWEATHER_KEY}
+      - TMDB_KEY=${TMDB_KEY}
+    ports:
+      - "8501:8501"
+    volumes:
+      - .:/app
+    networks:
+      - aisignal-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      ollama:
+        condition: service_healthy
+
+  # ========================================
+  # Scheduler API (FastAPI)
+  # ========================================
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: aisignal-api
+    command: uvicorn agents.scheduler_api:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env.production
+    volumes:
+      - .:/app
+    networks:
+      - aisignal-network
+    depends_on:
+      postgres:
+        condition: service_healthy
       redis:
         condition: service_healthy
 
