--- a/ai/aisignal/Dockerfile
+++ b/ai/aisignal/Dockerfile
@@ -16,7 +16,31 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     git \
     libpq-dev \
+    nodejs \
+    npm \
+    chromium \
+    libnss3 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
+    libgbm1 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libasound2 \
     && rm -rf /var/lib/apt/lists/*
+
+# Set Puppeteer environment variables
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+
+# Install Stealth Crawler dependencies
+WORKDIR /app/stealth-crawler
+COPY stealth-crawler/package*.json ./
+RUN npm install
+WORKDIR /app
 
 # Install Python dependencies
 COPY requirements.txt .
