chore: upgrade render plan to starter

--- a/ai/aisignal/render.yaml
+++ b/ai/aisignal/render.yaml
@@ -3,7 +3,7 @@ services:
     name: aisignal
     env: docker
     region: singapore
-    plan: free
+    plan: starter
     branch: main
     envVars:
       - key: PORT
