--- a/ai/aisignal/render.yaml
+++ b/ai/aisignal/render.yaml
@@ -4,6 +4,7 @@ services:
     env: docker
     region: singapore
     plan: starter
+    numInstances: 1
     branch: main
     dockerContext: .
     dockerfilePath: ./Dockerfile
