fix: revert render plan to free and remove explicit instances

--- a/ai/aisignal/render.yaml
+++ b/ai/aisignal/render.yaml
@@ -3,8 +3,7 @@ services:
     name: ai-signal
     env: docker
     region: singapore
-    plan: starter
-    numInstances: 1
+    plan: free
     branch: main
     dockerContext: .
     dockerfilePath: ./Dockerfile
