fix: set render plan to starter and runtime to docker to match existing service

--- a/ai/aisignal/render.yaml
+++ b/ai/aisignal/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-signal
     env: docker
     region: singapore
-    plan: free
+    plan: starter
     branch: main
     dockerContext: .
     dockerfilePath: ./Dockerfile
