Rename service from 'ai-signal-odf5' to 'ai-signal'

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ai-signal-odf5
+    name: ai-signal
     env: docker
     rootDir: ai/aisignal
     dockerContext: ai/aisignal
