--- a/ai/aisignal/requirements.txt
+++ b/ai/aisignal/requirements.txt
@@ -13,6 +13,7 @@ deprecation==2.1.0
 fsspec==2026.2.0
 gitdb==4.0.12
 GitPython==3.1.46
+google-generativeai==0.8.4
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -36,14 +37,15 @@ pandas==2.3.3
 pillow==12.1.0
 postgrest==2.27.3
 propcache==0.4.1
-protobuf==6.33.5
+propcache==0.4.1
+protobuf<6.0.0
 psycopg2-binary==2.9.11
 pyarrow==23.0.0
 pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 pydeck==0.9.1
-Pygments==2.19.2
+pygments==2.19.2
 pyiceberg==0.10.0
 PyJWT==2.11.0
 pyparsing==3.3.2
